css/activities.css
/* ... */
#popdown-palette .palette.show .show-button {
  display: none;
}

#popdown-palette .palette:not(.show) .hide-button {
  display: none;
}

#popdown-palette .palette:not(.show) .popout-button {
  display: none;
}

div.back {
  display: block;
  position: fixed;
  height: 2.5em;
  width: 100%;
  top: calc(100% - 2.5em);
  background-color: #4682b4;
}

div.back h2 {
  margin-top: 0.25em;
  border-bottom: none !important;
  color: white;
}

div.back:active {
  background-color: black;
}

.canvasHolder {
  transition: 0.75s ease all;
  transform-origin: 0 0;
  position: absolute;
  top: 0;
  left: 0;
}

.canvasHolder.hide {
  display: none;
}

nav {
  position: fixed;
  top: 0px;
  left: 0px;
  z-index: 100;
  background-color: #8bc34a;
  height: 64px;
  width: 100%;
  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.16), 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
  font: 32px sans;
  vertical-align: middle;
  line-height: 64px;
  color: white;
}

nav .nav-container {
  padding: 0 0px;
}

nav h1 {
  font-size: 32px;
  position: relative;
  top: -12px;
  display: inline;
}

nav imghover {
  background-color: rgba(255, 255, 255, 0.3);
}

nav imgactive {
  background-color: rgba(255, 255, 255, 0.8);
}

nav ul {
  list-style: none;
  text-align: right;
  display: inline;
}

nav ul li {
  display: inline;
  padding-right: 12px;
  /*   float: right; */
}

.nav-spacer {
  height: 96px;
}

.content {
  padding: 0px;
  margin: 0px;
  display: flex;
  flex-wrap: wrap;
}

.content li {
  display: block;
  list-style: none;
  width: 23.75%;
  float: left;
  padding-left: 1%;
}

.content li[current="true"] img.thumbnail {
  opacity: 0;
}

@media (max-width: 500px) {
  .content li {
    width: 48.5%;
    padding-left: 1%;
  }

  .canvasHolder.hide {
    transform: scale(0.485);
  }

  nav h1 {
    display: none;
  }
}

@media (max-width: 800px) and (min-width: 501px) {
  .content li {
    width: 32%;
    padding-left: 1%;
  }

  .canvasHolder.hide {
    transform: scale(0.32);
  }
}

.content li img.thumbnail {
  background: #96d3f3;
  width: 100%;
  padding: 0;
}

.content li .options,
.content li .options input {
  text-align: center;
}

#planet-iframe {
  width: 100vw;
  height: 100vh;
  background-color: #fff;
  position: absolute;
  top: 0;
  left: 0;
}

iframe,
canvas {
  overflow: clip !important;
}

.projectname {
  word-wrap: break-word;
}

img.icon {
  border-radius: 100%;
  width: 30px;
}

img.icon:hover {
  background-color: rgba(139, 195, 74, 0.8);
}

#loading-image-container {
  z-index: 89999;
}

body {
  background-color: #92b5c8 !important;
  /*  2.5B 7/4 */
  padding: 0;
  margin: 0;
  font-family: sans-serif;
  overflow: hidden;
}

body.noScroll {
  overflow: hidden;
}

body.samples-shown {
  overflow-y: scroll;
  background: white !important;
}

select {
  background-color: #88e20a;
  text-align: center;
  font-weight: bold !important;
  resize: none !important;
  padding: 0 !important;
  border: 0 !important;
  width: 20px;
}

input.input {
  background-color: #fff !important;
  text-align: center;
  font-weight: bold !important;
  font-size: 24px !important;
  resize: none !important;
  padding: 0px !important;
  border: 1px !important;
  width: 200px;
}

input.text {
  background-color: #ff5942 !important;
  text-align: center;
  font-weight: bold !important;
  resize: none !important;
  padding: 0 !important;
  border: 0 !important;
  width: 100px;
}

input.boolean {
  background-color: #c96df3 !important;
  /* */
  text-align: center;
  font-weight: bold !important;
  resize: none !important;
  padding: 0 !important;
  border: 0 !important;
  width: 100px;
}

input.number {
  background-color: #ff5293 !important;
  /* 0RP 8/10 */
  text-align: center;
  font-weight: bold !important;
  resize: none !important;
  padding: 0 !important;
  border: 0 !important;
  width: 100px;
}

input.musicratio1,
input.musicratio2 {
  background-color: #8cc6ff !important;
  text-align: center;
  font-size: 24px;
  font-weight: bold !important;
  resize: none !important;
  padding: 0 !important;
  border: 0 !important;
  width: 100% !important;
  height: 100% !important;
}

input.BPMInput {
  background-color: #8cc6ff !important;
  text-align: center;
  font-size: 24px;
  font-weight: bold !important;
  resize: none !important;
  padding: 0 !important;
  border: 0 !important;
  width: 100% !important;
  height: 100% !important;
}

table {
  border-collapse: separate;
  border-spacing: 1px 1px;
}

#canvas {
  overflow-y: visible;
  background-color: #FFFFFF; 
  width: 100%;
}

#statusDiv {
  position: absolute;
  top: 20%;
  left: 20%;
  background: rgba(255, 255, 255, 0.85) !important;
}

#statusTableDiv {
  position: relative;
  left: 0px;
  top: 0px;
  border: 0 !important;
  background: rgba(255, 255, 255, 0.85) !important;
  width: 680px;
}

#statusButtonsDiv {
  position: relative;
  left: 0px;
  top: 0px;
  border: 0 !important;
  background: rgba(255, 255, 255, 0.85);
}

#statusOuterDiv {
  position: absolute;
  left: 0px;
  top: 0px;
  right: 5em;
  overflow-y: auto;
  overflow-x: none;
  background: rgba(255, 255, 255, 0.85);
}

#statusInnerDiv {
  overflow-x: auto;
  margin-left: 53px;
}

#playbackDiv {
  position: absolute;
  top: 20%;
  left: 20%;
  background: rgba(255, 255, 255, 0.85) !important;
}

#playbackTableDiv {
  position: relative;
  left: 0px;
  top: 0px;
  border: 0 !important;
  background: rgba(255, 255, 255, 0.85) !important;
  width: 680px;
}

#playbackButtonsDiv {
  position: relative;
  left: 0px;
  top: 0px;
  border: 0 !important;
  background: rgba(255, 255, 255, 0.85);
}

#playbackOuterDiv {
  position: absolute;
  left: 0px;
  top: 0px;
  right: 5em;
  overflow-y: auto;
  overflow-x: none;
  background: rgba(255, 255, 255, 0.85);
}

#playbackInnerDiv {
  overflow-x: auto;
  margin-left: 53px;
}

#ptmDiv {
  position: absolute;
  top: 20%;
  left: 20%;
  background: rgba(255, 255, 255, 0.85) !important;
}
/* ... */

